add_executable(rci-qed
    auxblk.f90
    auxblk_I.f90
    dnicmv.f90
    dnicmv_I.f90
    dspevx_I.f90
    engout.f90
    engout_I.f90
    evcout.f90
    funk.f90
    funk_I.f90
    funl.f90
    funl_I.f90
    fzalf.f90
    fzalf_I.f90
    #gdsummpi_I.f90
    genintrk.f90
    genintrk_I.f90
    genintrkwrap.f90
    genintrkwrap_I.f90
    genmat.f90
    genmat2.f90
    genmat2_I.f90
    genmat_I.f90
    getcid.f90
    getcid_I.f90
    hmout.f90
    hmout_I.f90
    hovlap.f90
    hovlap_I.f90
    iabint.f90
    iabint_I.f90
    indtpi.f90
    indtpi_I.f90
    iniestdm.f90
    iniestdm_I.f90
    iniestsd.f90
    iniestsd_I.f90
    keint.f90
    keint_I.f90
    klamaq.f90
    klamaq_I.f90
    lodmixmpi.f90
    lodmixmpi_I.f90
    lodres.f90
    lodres_I.f90
    maneig.f90
    maneig_I.f90
    matrix.f90
    matrix_I.f90
    mohr.f90
    mohr_I.f90
    ncharg.f90
    ncharg_I.f90
    qed.f90
    qed_I.f90
    qed_slfen.f90
    qed_slfen_I.f90
    ratden_I.f90
    rci90mpi.f90
    setdbg.f90
    setdbg_I.f90
    setham_gg.f90
    setham_gg_I.f90
    setmixmpi.f90
    setmixmpi_I.f90
    setres.f90
    setres_I.f90
    setsum.f90
    setsum_I.f90
    spodmv.f90
    spodmv_I.f90
    strsum.f90
    strsum_I.f90
    triangrk.f90
    triangrk_I.f90
    vac2.f90
    vac2_I.f90
    vac4.f90
    vac4_I.f90
    vacpol.f90
    vacpol_I.f90
    vint.f90
    vint_I.f90
    vinti.f90
    vinti_I.f90
    vpint.f90
    vpint_I.f90
    vpintf.f90
    vpintf_I.f90
    wghtd5.f90
    wghtd5_I.f90
)
target_link_libraries_Fortran(rci-qed PUBLIC mod 9290 rang90 mpi90 dvd90 breit)
install(TARGETS rci-qed DESTINATION bin/)
